# vesc

./: .gitignore  README.md
arti_base_control/: CMakeLists.txt  package.xml
arti_base_control/cfg/: Axle.cfg  BaseControl.cfg  Vehicle.cfg
arti_base_control/include/arti_base_control/: axle.h  base_control.h  drive_motor.h  motor_factory.h  steering.h  steering_motor.h  types.h  utils.h  vehicle.h  wheel.h
arti_base_control/src/: axle.cpp  base_control.cpp  base_control_node.cpp  drive_motor.cpp  motor_factory.cpp  steering.cpp  steering_motor.cpp  utils.cpp  vehicle.cpp  wheel.cpp
arti_base_control/test/: test_wheel.cpp
vesc_ackermann/: CMakeLists.txt  package.xml
vesc_ackermann/cfg/: Ackermann.cfg  Axis.cfg  Axle.cfg  BaseControl.cfg  Vehicle.cfg
vesc_ackermann/include/vesc_ackermann/: axis.h  axle.h  base_control.h  drive_motor.h  motor_factory.h  optional_data_publisher.h  publish_helper.h  steering.h  steering_motor.h  types.h  utils.h  vehicle.h  vehicle_velocity.h  vesc_ackermann.h  vesc_drive_motor_decorator.h  vesc_steering_motor_decorator.h  wheel.h
vesc_ackermann/src/: axis.cpp  axle.cpp  base_control.cpp  base_control_node.cpp  drive_motor.cpp  motor_factory.cpp  publish_helper.cpp  steering.cpp  steering_motor.cpp  utils.cpp  vehicle.cpp  vehicle_velocity.cpp  vesc_ackermann.cpp  vesc_ackermann_node.cpp  vesc_drive_motor_decorator.cpp  vesc_steering_motor_decorator.cpp  wheel.cpp
vesc_ackermann/test/: test_wheel.cpp
vesc_differential_drive/: CMakeLists.txt  package.xml
vesc_differential_drive/cfg/: DifferentialDrive.cfg
vesc_differential_drive/include/vesc_differential_drive/: vesc_differential_drive.h  vesc_differntial_drive.h  vesc_motor.h  vesc_transport_factory.h
vesc_differential_drive/src/: vesc_differential_drive.cpp  vesc_differential_drive_node.cpp  vesc_differntial_drive.cpp  vesc_motor.cpp  vesc_transport_factory.cpp
vesc_driver/: CMakeLists.txt  package.xml
vesc_driver/include/vesc_driver/: blocking_queue.h  byte_buffer.h  motor_controller_state.h  packet.h  periodic_execution.h  periodic_task.h  serial_data_reader.h  serial_data_writer.h  serial_packet_codec.h  serial_transport.h  transport.h  transport_request.h  types.h  vesc_driver.h  vesc_driver_impl.h  vesc_driver_interface.h  vesc_driver_mockup.h  vesc_driver_node.h  vesc_driver_serial.h  vesc_interface.h  vesc_packet.h  vesc_ros_driver.h
vesc_driver/launch/: vesc_auger.launch  vesc_driver.launch  vesc_j0.launch  vesc_j1.launch  vesc_j2.launch  vesc_lifter.launch  vesc_tube.launch
vesc_driver/src/: byte_buffer.cpp  periodic_execution.cpp  periodic_task.cpp  serial_data_reader.cpp  serial_data_writer.cpp  serial_packet_codec.cpp  serial_transport.cpp  transport_request.cpp  vesc_driver.cpp  vesc_driver_impl.cpp  vesc_driver_interface.cpp  vesc_driver_mockup.cpp  vesc_driver_node.cpp  vesc_driver_nodelet.cpp  vesc_driver_serial.cpp  vesc_interface.cpp  vesc_packet.cpp  vesc_ros_driver.cpp
vesc_driver/test/: test_serial_packet_codec.cpp
vesc_motor/: CMakeLists.txt  package.xml
vesc_motor/cfg/: DriveMotor.cfg  SteeringMotor.cfg
vesc_motor/include/vesc_motor/: driver_factory.h  transport_factory.h  types.h  vesc_drive_motor.h  vesc_motor.h  vesc_steering_motor.h  vesc_transport_factory.h
vesc_motor/src/: driver_factory.cpp  transport_factory.cpp  vesc_drive_motor.cpp  vesc_motor.cpp  vesc_steering_motor.cpp  vesc_transport_factory.cpp
