<?xml version="1.0"?>
<package>
  <name>vesc_driver</name>
  <version>0.0.2</version>
  <description>
    ROS device driver for the Vedder VESC open source motor driver.
  </description>

  <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc_driver</url>
  <url type="repository">https://github.com/ARTI-Robots/vesc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>

</package>
