<?xml version="1.0"?>
<package format="2">
  <name>vesc_motor</name>
  <version>0.0.0</version>
  <description>The vesc_motor package</description>

  <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>
  <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/vesc_motor</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vesc_driver</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>vesc_driver</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>vesc_driver</exec_depend>

  <export>
  </export>
</package>
